<resources>
    <string name="app_name">Childhood Games</string>
    <string name="setting_string">Settings</string>
    <string name="start_game_string">Start Games</string>
    <string name="message_board_string">Message Board</string>

    <string name="screen_brightness_string">Screen Brightness</string>
    <string name="volume_setting_string">Volume</string>
    <string name="mute_setting_string">Mute</string>
    <string name="auto_brightness_setting_string">Auto</string>
    <string name="theme_color_string">Theme Color</string>
    <string name="staff_members_button_string">Staff Members Acknowledgement</string>

    <string name="game_1_string">Double Rock-paper-scissors</string>
    <string name="game_2_string">Finger</string>
    <string name="game_3_string">Double Bear</string>

    <string name="game_1_rule">In the first round, both side of the player choose two options respectively.
        \n\nAfter selection, click the start button, and the choices of both sides will be displayed on the screen.
        \n\nIn the second round, both player need to choose another item from your previous two choices. This choice will cancel the selected item.
        \n\nAfter selecting, press the start button. Finally, the final result will be displayed in the middle of the screen.</string>
    <string name="game_2_rule">This game is called finger, it is a game similar to throw the die.
        \n\nThere are three imageview on the desk, each one can roll out numbers 1-9. The player whose result (the sum of three numbers) is larger can win the game. The button "play" is let the three views start with random numbers.
        \n\nThe button stop is get the number of three views, and the tips at the bottom of the screen will show the total number of the three views.
        \n\nThe restart button is to return the three views into the initial state.
        \n\nThe player can write down their goal on the edit line. Who will win the game and the rule of game is depended on you.</string>
    <string name="game_3_rule">This is a game named “double bear” which used to be a sample gesture game like finger guessing game in developer’s childhood.
        \n\nThe main method to playing this game is to use the magic arts struck down rival to be the winner. The game allow at least 2 players and no more than 4 players to play in the past. The most three basic magic is “gas”, “shield” and “baozi”.
        \n\nFirst magic “gas”, it is similar with energy value. Each round allow each players to use one magic and if you use this one, it will give you one gas and you can use the gas like energy in the future confrontation. With the consume of the gas, you can use lot of attack magic like “baozi”. Make sure that your rival didn’t use attack magic like “baozi” when you are using “gas”, it will shut down your life! Every attack magic will kill you if you use “gas” to withstand. So, use it cautious and caredully. It can be sure that the first magic of each person must be “gas” because each attack need gas to display and in the first round, both of players have no gas.
        \n\nSecondly, shield. It can protect you from the “baozi”. It won’t need gas and it might be the most common magic in basic playing method.
        \n\nThird, baozi. It named from a Chinese traditional food “baozi”. It likes dumplings but bigger, it will cost one gas for each time using. Every time when you use baozi and your rival use gas, he lost the game. But if you have no more than one gas and you use baozi, you will lost the game because of lack of gas. In this turn, even if he use gas, he will win the game.
        \n\nMore information may from the developer.</string>

    <!-- String utils for Game 2 -->
    <string name="click_the_button_to_start">click_the_button_to_start</string>
    <string name="my_image_description" />
    <string name="start">start</string>
    <string name="stop">stop</string>
    <string name="restart">restart</string>
    <string name="pause">pause</string>

    <string name="staff_ack_msg1">A CAN301 module assessment related to simple native-Java based Android development.
        \nTest Platform: Xiaomi Mi Pad 4 with MIUI 9.6 (Android Oreo 8.1.0)
        \n\nPresented by Mingyi, Likang, SuperK &amp; Harry Lee.
        \nAdviser: Jianjun Chen
        \n\nDec, 2021</string>
    <string name="staff_ack_msg2">Project\'s GitHub repo available at:</string>

</resources>