<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".selectGamesActivity">

    <Button
        android:id="@+id/select_game_2_button"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="48dp"
        android:background="@mipmap/game_icon_finger"
        android:text="@string/game_2_string"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/select_game_3_button"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="32dp"
        android:background="@mipmap/game_icon_double_bear"
        android:text="@string/game_3_string"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_game_1_button" />

    <Button
        android:id="@+id/select_game_toBeContinue_button"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="48dp"
        android:text="to be continued..."
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_game_2_button" />

    <Button
        android:id="@+id/select_game_1_button"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="32dp"
        android:background="@mipmap/game_icon_doublerps"
        android:text="@string/game_1_string"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>